Set the site's root

--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ timezone: Europe/Paris
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://clementnerma.github.io/everythinggeeks
-root: /
+url: https://clementnerma.github.io/EverythingGeeks/
+root: /EverythingGeeks/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
